<resources>
    <string name="app_name">Memory</string>
    <string name="intro_text">The goal of this game is to find the matching cards. Choose two cards to view them. If they match, they disappear. If not, they turn back over and you try again.</string>
    <string name="start_matching4x3">Start Matching 4 x 3 Board</string>
    <string name="start_matching5x4">Start Matching 5 x 4 Board</string>
    <string name="number_of_misses4x3">Number of Misses =</string>
    <string name="number_of_matches4x3">Number of Matches =</string>
    <string name="instructions_string4x3">Choose a card.</string>
    <string name="num_miss_val_string4x3">0</string>
    <string name="num_match_val_string4x3">0</string>
</resources>