<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".match4x3"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_string4x3"
        android:textSize="18sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:id="@+id/instructions4x3"
        >
    </TextView>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        android:layout_marginTop="15dp"
        android:id="@+id/grid4x3"
        >

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:src="@drawable/cs477p1_cardback"
            android:id="@+id/card4x3_00"
            android:layout_marginStart="20dp"
            android:onClick="onCardClick4x3"
            android:scaleType="centerCrop"
            >
        </ImageButton>
        <ImageButton
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:src="@drawable/cs477p1_cardback"
            android:id="@+id/card4x3_01"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:onClick="onCardClick4x3"
            android:scaleType="centerCrop"
            >
        </ImageButton>
        <ImageButton
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:src="@drawable/cs477p1_cardback"
            android:id="@+id/card4x3_02"
            android:layout_marginStart="18dp"
            android:onClick="onCardClick4x3"
            android:scaleType="centerCrop"
            >
        </ImageButton>

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:src="@drawable/cs477p1_cardback"
            android:id="@+id/card4x3_10"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:onClick="onCardClick4x3"
            android:scaleType="centerCrop"
            >
        </ImageButton>
        <ImageButton
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:src="@drawable/cs477p1_cardback"
            android:id="@+id/card4x3_11"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:onClick="onCardClick4x3"
            android:scaleType="centerCrop"
            >
        </ImageButton>
        <ImageButton
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:src="@drawable/cs477p1_cardback"
            android:id="@+id/card4x3_12"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:onClick="onCardClick4x3"
            android:scaleType="centerCrop"
            >
        </ImageButton>

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:src="@drawable/cs477p1_cardback"
            android:id="@+id/card4x3_20"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:onClick="onCardClick4x3"
            android:scaleType="centerCrop"
            >
        </ImageButton>
        <ImageButton
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:src="@drawable/cs477p1_cardback"
            android:id="@+id/card4x3_21"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:onClick="onCardClick4x3"
            android:scaleType="centerCrop"
            >
        </ImageButton>
        <ImageButton
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:src="@drawable/cs477p1_cardback"
            android:id="@+id/card4x3_22"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:onClick="onCardClick4x3"
            android:scaleType="centerCrop"
            >
        </ImageButton>

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:src="@drawable/cs477p1_cardback"
            android:id="@+id/card4x3_30"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:onClick="onCardClick4x3"
            android:scaleType="centerCrop"
            >
        </ImageButton>
        <ImageButton
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:src="@drawable/cs477p1_cardback"
            android:id="@+id/card4x3_31"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:onClick="onCardClick4x3"
            android:scaleType="centerCrop"
            >
        </ImageButton>
        <ImageButton
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:src="@drawable/cs477p1_cardback"
            android:id="@+id/card4x3_32"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:onClick="onCardClick4x3"
            android:scaleType="centerCrop"
            >
        </ImageButton>
    </GridLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_matches4x3"
            android:layout_marginTop="15dp"
            android:layout_marginStart="12dp"
            android:textSize="25sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_match_val_string4x3"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:id="@+id/num_match4x3">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_misses4x3"
            android:layout_marginTop="5dp"
            android:layout_marginStart="12dp"
            android:textSize="25sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_miss_val_string4x3"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:id="@+id/num_miss4x3">
        </TextView>
    </LinearLayout>
</LinearLayout>
</ScrollView>