<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mem"
                android:textSize="70sp"
                android:layout_marginTop="25dp"
                android:textColor="#FFCCED"
                android:shadowColor="#DB028F"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"
                >
            </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/donutPic"
                android:src="@drawable/dessert_donut_food_sweet_icon">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ry"
                android:textSize="70sp"
                android:layout_marginTop="25dp"
                android:textColor="#FFCCED"
                android:shadowColor="#DB028F"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6">
            </TextView>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_text"
            android:textSize="22sp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="15dp"
            android:textColor="#000000">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Card Theme:"
            android:layout_marginEnd="60dp"
            android:textSize="25sp"
            android:layout_marginTop="50dp">
        </TextView>
        <RadioGroup
            android:id="@+id/radio_card_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp">

            <RadioButton
                android:id="@+id/radio_simple_cartoon"
                android:text="Simple Cartoon Icons"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/desc_simple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A selection of simple cartoon icons. The collection of icons are the same for each game."
                android:textColor="@color/magenta"
                android:textSize="18sp"
                android:layout_marginStart="33dp"
                android:visibility="gone"/>

            <RadioButton
                android:id="@+id/radio_emojis"
                android:text="Emojis"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/desc_emojis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A random selection of the emojis on your phone. The emojis change each game."
                android:textColor="@color/magenta"
                android:textSize="18sp"
                android:layout_marginStart="33dp"
                android:visibility="gone"/>

            <RadioButton
                android:id="@+id/radio_playing_cards"
                android:text="Playing Cards"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/desc_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A random selection from a 52-card standard deck. The selected cards change each game."
                android:textColor="@color/magenta"
                android:textSize="18sp"
                android:layout_marginStart="33dp"
                android:visibility="gone"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/board4x3Button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_matching4x3"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:background="@drawable/btn_gradient_selector"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:onClick="onButtonClick"
            android:insetBottom="0dp" android:insetTop="0dp"
            android:insetLeft="0dp" android:insetRight="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/board5x4Button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_matching5x4"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:background="@drawable/btn_gradient_selector"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:onClick="onButtonClick"
            android:insetBottom="0dp" android:insetTop="0dp"
            android:insetLeft="0dp" android:insetRight="0dp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>